--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,5 +29,11 @@
         android:minHeight="48dp"
         android:text="@string/name" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/enter"
+        android:layout_weight="1"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
