inputType:text,textPersonName,phone,number,textPassword,textEmailAddress,calendarView.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,7 @@
 
     <ToggleButton
         android:id="@+id/toggleButton"
+        style="@style/Animation.Design.BottomSheetDialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
